WIP - Extension points for completion & hover

--- a/org.eclipse.ui.editors.tests/build.properties
+++ b/org.eclipse.ui.editors.tests/build.properties
@@ -13,7 +13,8 @@ bin.includes = plugin.properties,\
                test.xml,\
                about.html,\
                .,\
-               META-INF/
+               META-INF/,\
+               plugin.xml
 
 src.includes = about.html
 
