--- a/org.eclipse.ui.workbench.texteditor/plugin.properties
+++ b/org.eclipse.ui.workbench.texteditor/plugin.properties
@@ -21,6 +21,7 @@ ExtPoint.referenceProvider= Reference Provider
 ExtPoint.rulerColumns= Ruler Columns
 ExtPoint.hyperlinkDetectors= Hyperlink Detectors
 ExtPoint.hyperlinkDetectorTargets= Hyperlink Detector Targets
+%ExtPoint.hoverProvider= Hover Provider
 
 textEditorPresentationActionSet.label= Editor Presentation
 
