--- a/org.eclipse.ui.workbench.texteditor/plugin.xml
+++ b/org.eclipse.ui.workbench.texteditor/plugin.xml
@@ -9,6 +9,8 @@
     <extension-point id="hyperlinkDetectorTargets" name="%ExtPoint.hyperlinkDetectorTargets" schema="schema/hyperlinkDetectorTargets.exsd"/>
     <extension-point id="hoverProvider" name="%ExtPoint.hoverProvider" schema="schema/hoverProvider.exsd"/>
     <extension-point id="contentAssistProcessors" name="%ExtPoint.contentAssistProcessors" schema="schema/contentAssistProcessors.exsd"/>
+    <extension-point id="presentationReconcilers" name="bla" schema="schema/presentationReconcilers.exsd"/>
+    
 
 	<extension
 	     point="org.eclipse.ui.commands">
