--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   are made available under the terms of the Eclipse Distribution License v1.0
   which accompanies this distribution, and is available at
   http://www.eclipse.org/org/documents/edl-v10.php
- 
+
   Contributors:
      Igor Fedorenko - initial implementation
 -->
@@ -28,11 +28,11 @@
     <tycho.scmUrl>scm:git:git://git.eclipse.org/gitroot/platform/eclipse.platform.text.git</tycho.scmUrl>
   </properties>
 
-  <!-- 
-    To build individual bundles, we specify a repository where to find parent pom, 
+  <!--
+    To build individual bundles, we specify a repository where to find parent pom,
     in case it is not in local maven cache already
-    and that parent pom also has fuller individual-bundle profile 
-    defined that is combined with this one. --> 
+    and that parent pom also has fuller individual-bundle profile
+    defined that is combined with this one. -->
   <profiles>
     <profile>
       <id>build-individual-bundles</id>
@@ -65,6 +65,9 @@
     <module>org.eclipse.ui.editors</module>
     <module>org.eclipse.search</module>
     <module>org.eclipse.ui.examples.javaeditor</module>
+    <!-- Generic editor -->
+    <module>org.eclipse.ui.genericeditor</module>
+    <module>org.eclipse.ui.genericeditor.tests</module>
   </modules>
 
 </project>
